# assembler

./: .gitignore  CMakeLists.txt
src/: general.h  instruction.c  instruction.h  logger.c  logger.h  main.c  procedures.c  procedures.h  table.c  table.h
src/core/: general.c  general.h  instruction.c  instruction.h  table.h
